2017-05-11  Julien Bect  <julien.bect@centralesupelec.fr>

	Remove dominated solutions in MOO sampling criteria

	* sampling/stk_sampcrit_ehvi_eval.m: Simply add a comment.
	Dominated solutions were already removed by stk_dominatedhv.
	* sampling/stk_sampcrit_emmi_eval.m: Remove dominated solutions
	and duplicates, as in stk_dominatedhv.

	stk_sampcrit_emmi_eval.m: Improve help text

	* sampling/stk_sampcrit_emmi_eval.m: Improve help text.

	stk_sampcrit_emmi_eval.m: Use capital variable names in help text

	* sampling/stk_sampcrit_emmi_eval.m: Use capital variable names in
	help text, as everywhere else in the toolbox.

	stk_sampcrit_ei_eval.m: Warn about deprecated use

	* sampling/stk_sampcrit_ei_eval.m: Add warnings about deprecated
	syntaxes, that were introduced inadvertently in STK 2.4.0 and will
	be removed in future releases.  These warnings should remain as
	long as we are in the 2.4.x series.

2017-05-09  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_sampcrit_ei_eval.m: Add help text

	* sampling/stk_sampcrit_ei_eval.m: Add help text.

	stk_param_estim.m: Improve error message (ticket #72)

	* paramestim/stk_param_estim.m: Issue a better error message when
	LNV0 is either NaN of infinite.

2017-05-08  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_sampcrit_ei_eval.m: Remove the 'goal' argument

	* sampling/stk_sampcrit_ei_eval.m: Remove the 'goal' argument and
	provide an implementation for *minimization* problems, which is
	the usual convention for optimization problems and which is
	consistent with the convention chosen for the EMMI and EHVI
	criteria.
	* examples/02_design_of_experiments/stk_example_doe03.m: Use the
	new syntax without the 'goal' argument, using minus signs instead.

2017-05-06  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_sampcrit_ei_eval.m: New syntax

	* sampling/stk_sampcrit_ei_eval.m: Adopt a syntax that is
	consistent with the syntax of the EHVI and EMMI *_eval functions.